# minutaria

./: LICENSE  README.rst  libminutaria.py  minutaria-cli.py  minutaria-curses.py  minutaria-gtk.py  minutaria.py  minutaria_curses.py  requirements.txt  setup.cfg  test_pytest_libminutaria_preset.py  test_unittest_libminutaria.py
assets/: attribution.rst
src/: libminutaria.py  minutaria-curses.py
src/libminutaria/: __init__.py  libminutaria.py
tests/: test_pytest_libminutaria_timer.py  test_unittest_libminutaria_handle_cli_args.py  test_unittest_libminutaria_preset.py  test_unittest_libminutaria_timer.py
