[metadata]
name = libminutaria
version = 1.0
author = Locynaeh
author_email = author@example.com
description = A basic Python timer
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Locynaeh/minutaria
project_urls =
    Bug Tracker = https://github.com/Locynaeh/minutaria/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
